--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <img src="img/Untitled/cloud3.png" alt="" data-speed="0.2" class="cloud_3 cloud">
         <img src="img/Untitled/boat.png" alt="" class="boat">
         <div class="header__content">
-            <h1 class="header__title">paralax effect</h1>
+            <h1 class="header__title"></h1>
         </div>
     </header>
     
